--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.0"
+    "react-router-dom": "^6.20.0",
+    "axios": "^1.6.0",
+    "framer-motion": "^10.16.16"
   },
   "scripts": {
     "start": "react-scripts start",
